<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tool="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <ImageView android:layout_width="match_parent"
               android:id="@+id/imageView"
               android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/tvCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginLeft="@dimen/dp_15"
            android:textColor="@color/black"
            tool:text="@string/toolCity"/>

    <TextView
            android:id="@+id/tvTemperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginLeft="@dimen/dp_15"
            android:textColor="@color/black"
            tool:text="@string/toolTemperature"/>

    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/dp_15"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_weight="1"
                      android:orientation="vertical"
                      android:layout_height="wrap_content">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/min"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/tvTemperatureMin"
                      tool:text="@string/toolTemperatureMin"/>
        </LinearLayout>


        <LinearLayout android:layout_width="match_parent"
                      android:orientation="vertical"
                      android:layout_weight="1"
                      android:layout_height="wrap_content">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/max"/>
            <TextView android:layout_width="wrap_content"
                      android:id="@+id/tvTemperatureMax"
                      android:layout_height="wrap_content"
                      tool:text="@string/toolTemperatureMax"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>